<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remindy">Remindy</string>
    <string name="title_screen_one">Add pills that you take regularly</string>
    <string name="description_screen_one">Start by adding any medication or vitamin \n you are taking on a regular basis.</string>
    <string name="next">Next</string>
    <string name="title_screen_two">Schedule for the time reminder</string>
    <string name="description_screen_two">Set a time and date for your pills, You can \n customize your own schedule.</string>
    <string name="title_screen_three">Get notification to take your pills</string>
    <string name="description_screen_three">Receive friendly reminders to help you take \n your pills on time</string>
    <string name="finish">Finish</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="check_connection">Check your connection settings \n and try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="register">Register</string>
    <string name="not_a_member">Not a member?</string>
    <string name="img_picked_cancelled">Image pick cancelled</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="full_name">Full Name</string>
    <string name="new_account">New \nAccount</string>
    <string name="upload_profile_picture">Upload your \n profile picture</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="set_your_profile_img">Please, Set your profile image!</string>
    <string name="type_your_full_name">Please, Type your Full Name!</string>
    <string name="type_your_email">Please, Type your Email!</string>
    <string name="type_email_address_correctly">Please, Type your Email address correctly!\nlike: example@example.com</string>
    <string name="type_your_password">Please, Type your Password!</string>
    <string name="password_length">Password should be at least 6 characters long!</string>
    <string name="confirm_your_password">Please, Confirm your password!</string>
    <string name="error_msg_password_incompatible">Two passwords incompatible</string>
    <string name="addamed">Add A Med</string>
    <string name="comment_on_play_store">Please, comment with error on play store to fix this error!</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link_sent">Email sent to you Successfully! \nPlease, check your email inbox.</string>
    <string name="reset">Reset</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="coming_soon">This feature will be activated soon…</string>
    <string name="add_dependent">Add Dependent</string>
    <string name="invite_med_friend">Invite med friend</string>
    <string name="logout">Logout</string>
    <string name="profiles">Profiles</string>
    <string name="med_friends">Med friends</string>
    <string-array name="time_frequency_array">
        <item>Once Daily</item>
        <item>Twice Daily</item>
        <item>3 Times a Day</item>
        <item>4 Times a Day</item>
    </string-array>
    <string name="open_dialogue">Click again to open dialogue!</string>
    <string name="personal_description">Hello Ahmed, it\'s time to take your 1:53 AM meds.</string>
    <string name="dose_time">1:53 AM</string>
    <string name="dose_name">Dose Name</string>
    <string name="dose_description">50 g, take 1 Pill(s) before eating \nOriginally scheduled for 8:00 AM, \ntoday, Feb 11</string>
    <string name="skip">Skip</string>
    <string name="take">Take</string>
    <string name="snooze">Snooze</string>
    <string name="hello">Hello</string>
    <string name="time_to_take">it\'s time to take your</string>
    <string name="meds">meds</string>
    <string name="before_eating">before eating \nOriginally scheduled for</string>
    <string name="warning">Warning</string>
    <string name="additional_permissions">Please Enable the additional permissions</string>
    <string name="additional_permissions_description">You will not receive notifications while the app is in background if you disable these permissions.\n\nEnable…\n1) Display pop-up windows while running in the background \n2) Display pop-up window</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="error_msg_permission_required">Permission required!\nPlease, give the permission to work correctly!</string>
    <string name="snooze_for_five_minutes">Snooze for 5 minutes</string>
    <string name="have_no_reminders">You don\'t have any reminders.</string>
    <string name="add_a_new_pill">Tap the button below to add a new pill.</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="connection_back">Connection Back</string>
    <string name="medicine_time">Hello, it\'s time to take your medicine.</string>
    <string name="healthTakerDesc">A health taker is a family member or a friend that helps you remember/take your meds in case you forget</string>
    <string name="send">Send</string>
    <string name="time_card">03:30</string>
    <string name="cefroxin">Cefroxin</string>
    <string name="strength_unit">50mg</string>
    <string name="everyday">everyday</string>
    <string name="after_eating">after_eating</string>
    <string name="future">future</string>
    <string name="amount_form">2 Solution</string>
    <string name="friendsRequests">Friends Requests</string>
    <string name="medFriends">Medfriends</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="refill">You need to refill this medicine.\nRemaining amount = </string>
    <string name="do_not_forgot_medicine">Let\'s make sure you don\'t forget your medicine</string>
    <string name="appointed_time">We will remind you at the appointed time</string>
</resources>