<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/medFriends"
            android:title="@string/med_friends">

            <menu>
                <item
                    android:id="@+id/itemMedFriends"
                    android:icon="@drawable/ic_groups_black_24dp"
                    android:title="@string/medFriends" />
                <item
                    android:id="@+id/itemMedFriendsReqs"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/friendsRequests" />
                <item
                    android:id="@+id/itemInviteMedFriend"
                    android:icon="@drawable/ic_baseline_add_circle_dogger_blue_24"
                    android:title="@string/invite_med_friend" />
            </menu>

        </item>
    </group>

<!--    <group-->
<!--        android:id="@+id/group3"-->
<!--        android:checkableBehavior="single">-->

<!--        <item-->
<!--            android:id="@+id/friendsRequests"-->
<!--            android:title="@string/friendsRequests">-->

<!--            <menu>-->
<!--                <item-->
<!--                    android:id="@+id/itemFriendReq"-->
<!--                    android:icon="@drawable/ic_account_circle_black_24dp"-->
<!--                    android:title="Friend name" />-->
<!--            </menu>-->
<!--        </item>-->
<!--    </group>-->

    <item
        android:id="@+id/itemLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>